# intro2ros_2024_weili_tang

./: CMakeLists.txt  README.md  package.xml
.git.old/: COMMIT_EDITMSG  HEAD  config  index
.git.old/logs/: HEAD
.git.old/logs/refs/remotes/origin/: traffic_light_detector
.git.old/refs/remotes/origin/: traffic_light_detector
Exercise 1/: main.cc  main.h
launch/: semantic_camera.launch  semantic_camera_with_controller.launch  traffic_light_controller.launch
msg/: TrafficLightStatus.msg
semantic-camera/: README.md
semantic-camera/msg/: TrafficLightStatus.msg
semantic-camera/src/: semantic_camera_node.cpp
solution/: calculator  main.cc
src/: semantic_camera_node.cpp  traffic_light_controller.cpp  traffic_light_detector_node.cpp
traffic_light_detector/: CMakeLists.txt  README.md  package.xml
traffic_light_detector/launch/: traffic_light_detector.launch
traffic_light_detector/src/: traffic_light_controller.cpp
