<package>
  <name>traffic_light_detector</name>
  <version>0.0.0</version>
  <description>The traffic_light_detector package</description>

  <maintainer email="weili.tang@tum.de">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

